# QBMSApp

./: BMS_FAN_CONTROL_FLOW.md  CMakeLists.txt  Main.qml  README.md  main.cpp  script.py  setup_gpio.sh  test_scrip.py
TEST_ARDUINO/: TEST_ARDUINO.ino
TEST_ESP32_RESPONSE/: TEST_ESP32_RESPONSE.ino
build_test/: CMakeCache.txt
qml/components/: AppCard.qml  AppShell.qml  BatteryCellBar.qml  BottomTabBar.qml  Gauge.qml  InfoPair.qml
qml/views/: DashboardView.qml  PacksView.qml  SettingsView.qml
src/backend/: bmsmanager.cpp  bmsmanager.h  bmsserialreader.cpp  bmsserialreader.h  bmssnapshot.h  fan_control_example.cpp  gpioFanController.cpp  gpioFanController.h  gpio_fan_controller.py  jbdprotocol.cpp  jbdprotocol.h
src/viewmodels/: bmsviewmodel.cpp  bmsviewmodel.h
